Update EIGN implementation

--- a/eign_config.json
+++ b/eign_config.json
@@ -3,14 +3,14 @@
     "valid_set": "./datasets/PDBBind/processed/identity30/valid.pkl",
     "save_dir": "./datasets/PDBBind/processed/identity30/models/EIGN",
     "task": "PDBBind",
-    "lr": 0.0001,
+    "lr": 0.0005,
     "final_lr": 0.0001,
-    "max_epoch": 20,
-    "save_topk": 3,
-    "max_n_vertex_per_gpu": 1500,
+    "max_epoch": 200,
+    "save_topk": 5,
+    "max_n_vertex_per_gpu": 2000,
     "shuffle": true,
     "model_type": "EIGN",
-    "hidden_size": 64,
+    "hidden_size": 256,
     "n_layers": 3,
     "n_channel": 1,
     "n_rbf": 32,
@@ -21,5 +21,11 @@
     "atom_level": true,
     "hierarchical": false,
     "no_block_embedding": false,
-    "seed": 2023
+    "seed": 2023,
+    "batch_size": 32,
+    "dropout": 0.1,
+    "weight_decay": 1e-6,
+    "patience": 30,
+    "grad_clip": 1.0,
+    "warmup": 5
 }
